charts/cluster-kubevirt/demo-redhatsummit2023-2.yml

## Create production legacy workload (v0)
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-v0
  namespace: mydemo
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: frontend
    version: v0
    app.kubernetes.io/part-of: mydemo
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-v0
  namespace: mydemo
spec:
  to:
    kind: Service
    name: frontend-v0
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: mydemo
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
    haproxy.router.openshift.io/disable_cookies: 'true'
spec:
  to:
    kind: Service
    name: frontend-v0
    weight: 10
  alternateBackends:
    - kind: Service
      name: frontend-v1
      weight: 10
    # - kind: Service
    #   name: frontend-v2
    #   weight: 10
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None

## Create the devel environement
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: devel
    app.openshift.io/vcs-uri: 'https://github.com/startxfr/docker-images-example-php.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"frontend:latest","namespace":"mydemo-devel"},"fieldPath":"spec.template.spec.containers[?(@.name==\"frontend\")].image","pause":"false"}]
  name: frontend
  namespace: mydemo-devel
  labels:
    app: frontend
    version: devel
    app.kubernetes.io/part-of: mydemo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend-devel
    app.kubernetes.io/name: frontend-devel
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 8.0-ubi9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: devel
      app.kubernetes.io/part-of: mydemo
      deployment: frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
        version: devel
        app.kubernetes.io/part-of: mydemo
        deployment: frontend
    spec:
      containers:
        - name: frontend
          image: >-
            image-registry.openshift-image-registry.svc:5000/mydemo-devel/frontend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
              ephemeral-storage: "200Mi"
            limits:
              memory: "512Mi"
              cpu: "300m"
              ephemeral-storage: "500Mi"
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 15
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 6
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: mydemo-devel
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: frontend
    version: devel
    app.kubernetes.io/part-of: mydemo
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: mydemo-devel
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None

## Create the recette environement
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: stable
    app.openshift.io/vcs-uri: 'https://github.com/startxfr/docker-images-example-php.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"frontend:latest","namespace":"mydemo-recette"},"fieldPath":"spec.template.spec.containers[?(@.name==\"frontend\")].image","pause":"false"}]
  name: frontend
  namespace: mydemo-recette
  labels:
    app: frontend
    version: stable
    app.kubernetes.io/part-of: mydemo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend-recette
    app.kubernetes.io/name: frontend-recette
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 8.0-ubi9
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: stable
      app.kubernetes.io/part-of: mydemo
      deployment: frontend
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
        version: stable
        app.kubernetes.io/part-of: mydemo
        deployment: frontend
    spec:
      containers:
        - name: frontend
          image: >-
            image-registry.openshift-image-registry.svc:5000/mydemo-recette/frontend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
              ephemeral-storage: "200Mi"
            limits:
              memory: "512Mi"
              cpu: "300m"
              ephemeral-storage: "500Mi"
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 15
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 6
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
  namespace: mydemo-recette
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: frontend
    version: stable
    app.kubernetes.io/part-of: mydemo
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend
  namespace: mydemo-recette
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None

## Add v1 deployment into production route
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: v1
    app.openshift.io/vcs-uri: 'https://github.com/startxfr/docker-images-example-php.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"frontend-v1:latest","namespace":"mydemo"},"fieldPath":"spec.template.spec.containers[?(@.name==\"frontend-v1\")].image","pause":"false"}]
  name: frontend-v1
  namespace: mydemo
  labels:
    app: frontend
    version: v1
    app.kubernetes.io/part-of: mydemo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend-v1
    app.kubernetes.io/name: frontend-v1
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.4-ubi8
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v1
      app.kubernetes.io/part-of: mydemo
      deployment: frontend-v1
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
        version: v1
        app.kubernetes.io/part-of: mydemo
        deployment: frontend-v1
    spec:
      containers:
        - name: frontend
          image: >-
            image-registry.openshift-image-registry.svc:5000/mydemo/frontend-v1:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "200Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 6
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-v1
  namespace: mydemo
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: frontend
    version: v1
    app.kubernetes.io/part-of: mydemo
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-v1
  namespace: mydemo
spec:
  to:
    kind: Service
    name: frontend-v1
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None

## Change routing to route only to v1
# echo '[{"op": "replace","path": "/spec/to/name","value": "frontend-v1"},{"op": "replace","path": "/spec/alternateBackends/0/name","value": "frontend-v0"},{"op": "replace","path": "/spec/alternateBackends/0/weight","value": 0}]' > /tmp/patch-file.json
# kubectl patch route frontend -n mydemo  --type json --patch-file /tmp/patch-file.json

## Remove old v0 VM server
# kubectl patch virtualmachine frontend-v0 -n mydemo  --type json --patch '[{"op": "replace","path": "/spec/running","value": false}]'

## Add v2 deployment into production route
---
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: v2
    app.openshift.io/vcs-uri: 'https://github.com/startxfr/docker-images-example-php.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"frontend-v2:latest","namespace":"mydemo"},"fieldPath":"spec.template.spec.containers[?(@.name==\"frontend-v2\")].image","pause":"false"}]
  name: frontend-v2
  namespace: mydemo
  labels:
    app: frontend
    version: v2
    app.kubernetes.io/part-of: mydemo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend-v2
    app.kubernetes.io/name: frontend-v2
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.4-ubi8
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      version: v2
      app.kubernetes.io/part-of: mydemo
      deployment: frontend-v2
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
        version: v2
        app.kubernetes.io/part-of: mydemo
        deployment: frontend-v2
    spec:
      containers:
        - name: frontend
          image: >-
            image-registry.openshift-image-registry.svc:5000/mydemo/frontend-v2:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "200Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 6
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: frontend-v2
  namespace: mydemo
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: frontend
    version: v2
    app.kubernetes.io/part-of: mydemo
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: frontend-v2
  namespace: mydemo
spec:
  to:
    kind: Service
    name: frontend-v2
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None

## Change routing to route Load balance v1 and v2 in production
# echo '[{"op": "replace","path": "/spec/to/name","value": "frontend-v1"},{"op": "replace","path": "/spec/alternateBackends/0/name","value": "frontend-v2"},{"op": "replace","path": "/spec/alternateBackends/0/weight","value": 10}]' > /tmp/patch-file.json
# kubectl patch route frontend -n mydemo  --type json --patch-file /tmp/patch-file.json

## Add ng project
---
kind: Service
apiVersion: serving.knative.dev/v1
metadata:
  name: frontend
  namespace: mydemo-ng
  annotations:
    # serving.knative.openshift.io/disableRoute: "true"
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: v2
    app.openshift.io/vcs-uri: 'https://github.com/startxfr/docker-images-example-php.git'
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"frontend:latest","namespace":"mydemo-ng"},"fieldPath":"spec.template.spec.containers[?(@.name==\"frontend\")].image","pause":"false"}]
    serving.knative.dev/creator: startx
  labels:
    app: frontend
    version: v2
    app.kubernetes.io/part-of: mydemo
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: frontend
    app.kubernetes.io/name: frontend-v2
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 8.0-ubi9
spec:
  template:
    metadata:
      annotations:
        autoscaling.knative.dev/target: '100'
        autoscaling.knative.dev/targetUtilizationPercentage: '70'
        autoscaling.knative.dev/window: 30s
        client.knative.dev/user-image: 'image-registry.openshift-image-registry.svc:5000/mydemo-ng/frontend'
      creationTimestamp: null
      labels:
        app: frontend
        version: v2
        app.kubernetes.io/part-of: mydemo
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: frontend
        app.kubernetes.io/name: frontend-v2
        app.openshift.io/runtime: php
        app.openshift.io/runtime-version: 8.0-ubi9
    spec:
      containerConcurrency: 0
      containers:
        - image: 'image-registry.openshift-image-registry.svc:5000/mydemo-ng/frontend'
          name: user-container
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "200Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
    - latestRevision: true
      percent: 100

## Add v3 deployment into ng project
